# orionbelt-ontology-builder

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  app.py  ontology_manager.py  pyproject.toml  requirements.txt  templates.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml  release.yml
.streamlit/: config.toml
orionbelt_ontology_builder/: __init__.py  app.py  cli.py  desktop.py  local_store.py  ontology_manager.py  streamlit_entry.py  templates.py
orionbelt_ontology_builder/lib/graph_viewer/: index.html
orionbelt_ontology_builder/samples/: README.md  geography-thesaurus.ttl
orionbelt_ontology_builder/samples/gist/: gistCore14.1.0.ttl  gistMediaTypes14.1.0.ttl  gistRdfsAnnotations14.1.0.ttl  gistSubClassAssertions14.1.0.ttl
tests/: test_annotations.py  test_autosave.py  test_brand_theme.py  test_bulk.py  test_class_hierarchy_text.py  test_classes.py  test_classes_page_ui.py  test_cli.py  test_custom_uri.py  test_delete_impact.py  test_desktop.py  test_diff.py  test_jsonld.py  test_list_pagination_ui.py  test_local_file_persist.py  test_local_store.py  test_merge.py  test_name_validation.py  test_namespace_create.py  test_nav_mark_open.py  test_pagination.py  test_prefixes.py  test_properties.py  test_relations_restrictions_search.py  test_relations_search_ui.py  test_rename.py  test_restrictions_view_ui.py  test_samples.py  test_search.py  test_templates.py  test_usages.py  test_validation.py  test_version_consistency.py  test_viz_class_filter.py  test_viz_settings.py
