[project]
name = "orionbelt-ontology-builder"
version = "1.3.0"
description = "A Streamlit application for building, editing, and managing OWL ontologies"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [{name = "Ralf Becher, RALFORION d.o.o.", email = "ralf.becher@web.de"}]
keywords = ["ontology", "owl", "rdf", "rdflib", "streamlit", "semantic-web", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.28.0",
    "rdflib>=7.0.0",
    "owlrl>=6.0.2",
    "networkx>=3.0",
    "pyvis>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/ralfbecher/orionbelt-ontology-builder"
Repository = "https://github.com/ralfbecher/orionbelt-ontology-builder"
Issues = "https://github.com/ralfbecher/orionbelt-ontology-builder/issues"
Demo = "https://orionbelt.streamlit.app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning:rdflib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "ontology_manager", "templates"]

[tool.setuptools.package-data]
"*" = [
    "lib/**/*",
    "docs/assets/*",
]
