[project]
name = "orionbelt-ontology-builder"
version = "1.7.0"
description = "A Streamlit application for building, editing, and managing OWL ontologies"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [{name = "Ralf Becher, RALFORION d.o.o.", email = "info@ralforion.com"}]
keywords = ["ontology", "owl", "rdf", "rdflib", "streamlit", "semantic-web", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit>=1.28.0",
    "rdflib>=7.0.0",
    "owlrl>=6.0.2",
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "streamlit-local-storage>=0.0.25",
]

[project.scripts]
orionbelt-ontology-builder = "orionbelt_ontology_builder.cli:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.19",
    "mypy==1.18.2",
]

[project.urls]
Homepage = "https://github.com/ralforion/orionbelt-ontology-builder"
Repository = "https://github.com/ralforion/orionbelt-ontology-builder"
Issues = "https://github.com/ralforion/orionbelt-ontology-builder/issues"
Demo = "https://orionbelt.streamlit.app"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning:rdflib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The package directory carries the source modules and all bundled data files
# (samples, vis-network bundle, UI assets, favicon). Top-level shim modules
# (`app.py`, `ontology_manager.py`, `templates.py`) are kept as `py-modules`
# for backward compatibility with `streamlit run app.py` and existing test
# imports — they each just re-export from the package.
py-modules = ["app", "ontology_manager", "templates"]
packages = ["orionbelt_ontology_builder"]
include-package-data = true

[tool.setuptools.package-data]
orionbelt_ontology_builder = [
    "favicon.png",
    "assets/*",
    "lib/**/*",
    "samples/**/*.ttl",
    "samples/**/*.owl",
    "samples/**/*.rdf",
    "samples/**/*.txt",
    "samples/**/LICENSE*",
    "samples/README.md",
]
