[project]
name = "orionbelt-ontology-builder"
version = "1.14.0"
description = "A Streamlit application for building, editing, and managing OWL ontologies"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [{name = "Ralf Becher, RALFORION d.o.o.", email = "info@ralforion.com"}]
keywords = ["ontology", "owl", "rdf", "rdflib", "streamlit", "semantic-web", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit==1.49.1",
    "rdflib>=7.0.0",
    "owlrl>=6.0.2",
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "streamlit-local-storage>=0.0.25",
]

[project.scripts]
orionbelt-ontology-builder = "orionbelt_ontology_builder.cli:run"
orionbelt-ontology-builder-desktop = "orionbelt_ontology_builder.desktop:run"

[project.optional-dependencies]
desktop = [
    "streamlit-desktop-app>=0.3.3",
    # pywebview needs a native GUI/web-rendering backend at runtime. macOS
    # bundles one (Cocoa/WebKit via pywebview's pyobjc deps), but on Linux and
    # Windows none ships by default, so the desktop launcher fails without an
    # explicit backend. pywebview's Qt backend loads through qtpy, so PySide6
    # alone is not enough; pulling pywebview's own pyside6 extra installs both
    # qtpy and PySide6 (Qt + QtWebEngine), the combination it expects.
    "pywebview[pyside6]; sys_platform != 'darwin'",
    # Detect the OS light/dark appearance for the "follow system" theme mode.
    # The embedded webview does not report the system colour scheme reliably, so
    # we read it from the OS directly.
    "darkdetect>=0.8.0",
]
# Explicit Qt backend, identical to `desktop`. PySide6 is the LGPL Qt for
# Python; we deliberately use pywebview's `pyside6` extra rather than its `qt`
# extra (which would pull a second, conflicting binding, PyQt6).
qt = [
    "streamlit-desktop-app>=0.3.3",
    "pywebview[pyside6]; sys_platform != 'darwin'",
    "darkdetect>=0.8.0",
]
# GTK backend (Linux only; macOS uses Cocoa and Windows uses Qt/EdgeChromium).
# pywebview[gtk] installs PyGObject, but a working GTK backend ALSO needs system
# packages pip cannot provide (gobject-introspection, libgirepository and the
# WebKit typelib gir1.2-webkit2-4.x). See the README for the apt prerequisites.
gtk = [
    "streamlit-desktop-app>=0.3.3",
    "pywebview[gtk]; sys_platform == 'linux'",
    "darkdetect>=0.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.19",
    "mypy==1.18.2",
]

[project.urls]
Homepage = "https://github.com/ralforion/orionbelt-ontology-builder"
Repository = "https://github.com/ralforion/orionbelt-ontology-builder"
Issues = "https://github.com/ralforion/orionbelt-ontology-builder/issues"
Demo = "https://orionbelt.streamlit.app"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:ConjunctiveGraph is deprecated:DeprecationWarning:rdflib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# The package directory carries the source modules and all bundled data files
# (samples, vis-network bundle, UI assets, favicon). Top-level shim modules
# (`app.py`, `ontology_manager.py`, `templates.py`) are kept as `py-modules`
# for backward compatibility with `streamlit run app.py` and existing test
# imports — they each just re-export from the package.
py-modules = ["app", "ontology_manager", "templates"]
packages = ["orionbelt_ontology_builder"]
include-package-data = true

[tool.setuptools.package-data]
orionbelt_ontology_builder = [
    "favicon.png",
    "assets/*",
    "lib/**/*",
    "samples/**/*.ttl",
    "samples/**/*.owl",
    "samples/**/*.rdf",
    "samples/**/*.txt",
    "samples/**/LICENSE*",
    "samples/README.md",
]
